--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% extends './Sidebar/sidebar.html' %}
+{% block predictform %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -140,3 +142,5 @@
     </script>
 </body>
 </html>
+{% endblock %}
+
