--- a/templates/Breast.html
+++ b/templates/Breast.html
@@ -1,15 +1,162 @@
-{% extends './Sidebar/sidebar.html' %}
-{% block Breastform %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
+              </li>
+              <li class="nav-item" style="height: fit-content;
+              margin-top: 8px;
+              width: 108px;">
+                <div class="dropdown">
+                  <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
+                  style="text-decoration: none !important; color: white !important; cursor: pointer;"
+                  >
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
+                    <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
+                    <li><a href="/breast" class="dropdown-item"  >Breast</a></li>
+                    <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
+                    <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Help</a>
+              </li>
+       
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- End Nav Here -->
+<!-- Start Form Tag -->
+<form method="post" accept-charset="utf-8" name="Modelform">
+  <!-- <div class="col-md-10 form-group" >
+      <label><b>Enter Age:</b> </label><br>
+      <input type="number" class="form-control" id="age" name="age"
+             placeholder="Enter Age ">
+  </div> -->
+  <!-- Diagnose -->
+  <div class="col-md-10 form-group" >
+      <label><b>Enter diagnosis</b> </label><br>
+      <select class="selectpicker form-control" id="diagnosis" name="diagnosis" required="1"
+      >
+          <option value="M">M</option>
+          <option value="B">B</option>
+      </select>
+  </div>
+  <!-- radius_mean -->
+    <!-- onchange="load_car_models(this.id,'car_models')" -->
+  <div class="col-md-10 form-group" >
+      <label><b>Select radius_mean:</b> </label><br>
+      <select class="selectpicker form-control" id="radius_mean" name="radius_mean" required="1"
+      >
+          {% for radiusmean in radius_mean %}
+          <option value="{{ radiusmean }}">{{ radiusmean }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <!-- 	texture_mean -->
+  <div class="col-md-10 form-group" >
+      <label><b>Select texture_mean:</b> </label><br>
+      <select class="selectpicker form-control" id="Direct_Bilirubin" name="Direct_Bilirubin" required="1"
+      >
+          {% for texturemean in texture_mean %}
+          <option value="{{ texturemean }}">{{ texturemean }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <!-- perimeter_mean -->
+  <div class="col-md-10 form-group" >
+      <label><b>Select perimeter_mean:</b> </label><br>
+      <select class="selectpicker form-control" id="alkaline_Phosphotase" name="alkaline_Phosphotase" required="1"
+      >
+          {% for perimetermean in perimeter_mean %}
+          <option value="{{ perimetermean }}">{{ perimetermean }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <div class="col-md-10 form-group" >
+      <label><b>Select area_mean:</b> </label><br>
+      <select class="selectpicker form-control" id="alamine_Aminotransferase" name="alamine_Aminotransferase" required="1"
+      >
+          {% for areamean in area_mean %}
+          <option value="{{ areamean }}">{{ areamean }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <!-- aspartate_Aminotransferase -->
+  <!-- <div class="col-md-10 form-group" >
+      <label><b>Select the aspartate_Aminotransferase:</b> </label><br>
+      <select class="selectpicker form-control" id="aspartate_Aminotransferase" name="aspartate_Aminotransferase" required="1"
+      >
+          {% for aspartateaminotransferase in aspartate_Aminotransferase %}
+          <option value="{{ aspartateaminotransferase }}">{{ aspartateaminotransferase }}</option>
+          {% endfor %}
+      </select>
+  </div> -->
+  <!-- total_Protiens -->
+  <!-- <div class="col-md-10 form-group" >
+      <label><b>Select the total_Protiens:</b> </label><br>
+      <select class="selectpicker form-control" id="total_Protiens" name="total_Protiens" required="1"
+      >
+          {% for totalprotiens in total_Protiens %}
+          <option value="{{ totalprotiens }}">{{ totalprotiens }}</option>
+          {% endfor %}
+      </select>
+  </div> -->
+  <!-- albumin -->
+  <!-- <div class="col-md-10 form-group" >
+      <label><b>Select the albumin:</b> </label><br>
+      <select class="selectpicker form-control" id="albumin" name="albumin" required="1"
+      >
+          {% for album in albumin %}
+          <option value="{{ album }}">{{ album }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <div class="col-md-10 form-group" >
+      <label><b>Select the albumin_and_Globulin_Ratio:</b> </label><br>
+      <select class="selectpicker form-control" id="albumin_and_Globulin_Ratio" name="albumin_and_Globulin_Ratio" required="1"
+      >
+          {% for albuminAndGlobulinRatio in albumin_and_Globulin_Ratio %}
+          <option value="{{ albuminAndGlobulinRatio }}">{{ albuminAndGlobulinRatio }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <div class="col-md-10 form-group" style="text-align: center">
+      <button  class="btn btn-primary form-control" onclick="send_data()" >Predict Price</button>
+  </div> -->
+</form>
+
     <h1>Here is Breast Cancer Prediction</h1>
+   
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
+
 </html>
-{% endblock %}
