--- a/templates/Heart.html
+++ b/templates/Heart.html
@@ -1,15 +1,223 @@
-{% extends './Sidebar/sidebar.html' %}
-{% block HeartPredict %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
+              </li>
+              <li class="nav-item" style="height: fit-content;
+              margin-top: 8px;
+              width: 108px;">
+                <div class="dropdown">
+                  <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
+                  style="text-decoration: none !important; color: white !important; cursor: pointer;"
+                  >
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
+                    <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
+                    <li><a href="/breast" class="dropdown-item" >Breast</a></li>
+                    <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
+                    <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Help</a>
+              </li>
+       
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- End Navbar -->
+
+    <!-- Start Form Tag -->
     <h1>Heart prediction</h1>
+    <form method="post" accept-charset="utf-8" name="Modelform">
+      <div class="col-md-10 form-group" >
+          <label><b>Enter Age:</b> </label><br>
+          <input type="number" class="form-control" id="age" name="age"
+                 placeholder="Enter Age ">
+      </div>
+      <!-- Gender -->
+      <div class="col-md-10 form-group" >
+          <label><b>Enter Gender</b> </label><br>
+          <select class="selectpicker form-control" id="sex" name="sex" required="1"
+          >
+              <option value="1">Male</option>
+              <option value="0">Female</option>
+          </select>
+      </div>
+      <!-- cp -->
+        <!-- onchange="load_car_models(this.id,'car_models')" -->
+      <div class="col-md-10 form-group" >
+          <label><b>Select cp:</b> </label><br>
+          <select class="selectpicker form-control" id="cp" name="cp" required="1"
+          >
+              {% for cps in cp %}
+              <option value="{{ cps }}">{{ cps }}</option>
+              {% endfor %}
+          </select>
+      </div>
+      <div class="col-md-10 form-group" >
+        <label><b>Select trestbps:</b> </label><br>
+        <select class="selectpicker form-control" id="trestbps" name="trestbps" required="1"
+        >
+            {% for tstbps in trestbps %}
+            <option value="{{ tstbps }}">{{ tstbps }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="col-md-10 form-group" >
+      <label><b>Select chol:</b> </label><br>
+      <select class="selectpicker form-control" id="chol" name="chol" required="1"
+      >
+          {% for chols in chol %}
+          <option value="{{ chols }}">{{ chols }}</option>
+          {% endfor %}
+      </select>
+  </div>
+  <div class="col-md-10 form-group" >
+    <label><b>Select fbs:</b> </label><br>
+    <select class="selectpicker form-control" id="fbs" name="fbs" required="1"
+    >
+        {% for fbss in fbs %}
+        <option value="{{ fbss }}">{{ fbss }}</option>
+        {% endfor %}
+    </select>
+</div>
+<div class="col-md-10 form-group" >
+  <label><b>Select restecg:</b> </label><br>
+  <select class="selectpicker form-control" id="restecgs" name="restecg" required="1"
+  >
+      {% for restecgs in restecg %}
+      <option value="{{ restecgs }}">{{ restecgs }}</option>
+      {% endfor %}
+  </select>
+</div>
+<div class="col-md-10 form-group" >
+  <label><b>Select thalach:</b> </label><br>
+  <select class="selectpicker form-control" id="thalach" name="thalach" required="1"
+  >
+      {% for thalachs in thalach %}
+      <option value="{{ thalachs }}">{{ thalachs }}</option>
+      {% endfor %}
+  </select>
+</div>
+<div class="col-md-10 form-group" >
+  <label><b>Select exang:</b> </label><br>
+  <select class="selectpicker form-control" id="exang" name="exang" required="1"
+  >
+      {% for exangs in exang %}
+      <option value="{{ exangs }}">{{ exangs }}</option>
+      {% endfor %}
+  </select>
+</div>
+
+<div class="col-md-10 form-group" >
+  <label><b>Select oldpeak:</b> </label><br>
+  <select class="selectpicker form-control" id="oldpeak" name="oldpeak" required="1"
+  >
+      {% for oldpeaks in oldpeak %}
+      <option value="{{ oldpeaks }}">{{ oldpeaks }}</option>
+      {% endfor %}
+  </select>
+</div>
+<div class="col-md-10 form-group" >
+  <label><b>Select slope:</b> </label><br>
+  <select class="selectpicker form-control" id="slope" name="slope" required="1"
+  >
+      {% for slopes in slope %}
+      <option value="{{ slopes }}">{{ slopes }}</option>
+      {% endfor %}
+  </select>
+</div>
+
+<div class="col-md-10 form-group" >
+  <label><b>Select ca:</b> </label><br>
+  <select class="selectpicker form-control" id="ca" name="ca" required="1"
+  >
+      {% for cas in ca %}
+      <option value="{{ cas }}">{{ cas }}</option>
+      {% endfor %}
+  </select>
+</div>
+
+<div class="col-md-10 form-group" >
+  <label><b>Select thal:</b> </label><br>
+  <select class="selectpicker form-control" id="thal" name="thal" required="1"
+  >
+      {% for thals in thal %}
+      <option value="{{ thals }}">{{ thals }}</option>
+      {% endfor %}
+  </select>
+</div>
+<div class="col-md-10 form-group" >
+  <label><b>Select target:</b> </label><br>
+  <select class="selectpicker form-control" id="target" name="target" required="1"
+  >
+      {% for targets in target %}
+      <option value="{{ targets }}">{{ targets }}</option>
+      {% endfor %}
+  </select>
+</div>
+<div class="col-md-10 form-group" style="text-align: center">
+  <button  class="btn btn-primary form-control" onclick="send_data()" >Predict</button>
+</div>
+    </form>
+    <br>
+    <div class="row">
+        <div class="col-12" style="text-align: center">
+            <h4><span id="prediction"></span></h4>
+        </div>
+    </div>
+    <script>
+      function form_handler(event) {
+   event.preventDefault(); // Don't submit the form normally
+      }
+  function send_data(){
+   var form = document.querySelector('form').addEventListener("submit",form_handler);
+   console.log(form,"form")
+   var fd=new FormData(document.querySelector('form'));
+
+    var xhr= new XMLHttpRequest({mozSystem: true});
+
+   xhr.open('POST','/getHeartPred',true);
+   document.getElementById('prediction').innerHTML="Wait! Prediction.....";
+   xhr.onreadystatechange = function(){
+       if(xhr.readyState == XMLHttpRequest.DONE){
+           document.getElementById('prediction').innerHTML="Prediction:"+xhr.responseText;
+
+       }
+   };
+   xhr.onload= function(){};
+   xhr.send(fd);
+  }
+</script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
-{% endblock %}
