--- a/templates/Sidebar/sidebar.html
+++ b/templates/Sidebar/sidebar.html
@@ -1,4 +1,4 @@
-{% extends './Home/home.html' %}
+<!-- {% extends './Home/home.html' %}
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../../static/style/sidebar.css">  
     <title></title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper"> -->
         <!-- Sidebar  -->
-        <nav id="sidebar">
+        <!-- <nav id="sidebar">
             <div class="sidebar-header">
                 <h3>Welcome</h3>
             </div>
@@ -30,10 +31,10 @@
                     <a href="/breast" style="color: white;list-style: none;">Breast</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
 
         <!-- Page Content  -->
-        <div id="content">
+        <!-- <div id="content">
             {% block predictform %} {% endblock %} 
             {% block Breastform %} {% endblock %} 
             {% block HeartPredict %} {% endblock %}           
@@ -41,4 +42,4 @@
     </div>
 </body>
 </html>
-{% endblock %}
+{% endblock %} -->
