--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,3 @@
-{% extends './Sidebar/sidebar.html' %}
-{% block predictform %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,16 +8,66 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
+              </li>
+              <li class="nav-item" style="height: fit-content;
+              margin-top: 8px;
+              width: 108px;">
+                <div class="dropdown">
+                  <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
+                  style="text-decoration: none !important; color: white !important; cursor: pointer;"
+                  >
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
+                    <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
+                    <li><a href="/breast" class="dropdown-item" >Breast</a></li>
+                    <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
+                    <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white;">Help</a>
+              </li>
+       
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- End Navbar -->
     <h1 style="text-align: center;">Liver</h1>
+    <div style="display:flex;justify-content:space-around; margin-top: 100px;">
+        <div style="width: 50%;">
+            <img src="{{ liverImg }}" alt="hypertension" style="width: 100%;height: 250px;">
+          </div>
     <div>
     <form method="post" accept-charset="utf-8" name="Modelform">
-        <div class="col-md-10 form-group" >
+        <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Enter Age:</b> </label><br>
             <input type="number" class="form-control" id="age" name="age"
                    placeholder="Enter Age ">
         </div>
         <!-- Gender -->
-        <div class="col-md-10 form-group" >
+        <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Enter Gender</b> </label><br>
             <select class="selectpicker form-control" id="gender" name="gender" required="1"
             >
@@ -27,9 +75,11 @@
                 <option value="0">Female</option>
             </select>
         </div>
+    </div>
         <!-- Bilirubin -->
           <!-- onchange="load_car_models(this.id,'car_models')" -->
-        <div class="col-md-10 form-group" >
+          <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the bilirubin:</b> </label><br>
             <select class="selectpicker form-control" id="totalBilirubin" name="totalBilirubin" required="1"
             >
@@ -39,7 +89,7 @@
             </select>
         </div>
         <!-- 	Direct_Bilirubin -->
-        <div class="col-md-10 form-group" >
+        <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the direct_Bilirubin:</b> </label><br>
             <select class="selectpicker form-control" id="Direct_Bilirubin" name="Direct_Bilirubin" required="1"
             >
@@ -48,8 +98,10 @@
                 {% endfor %}
             </select>
         </div>
+      </div>
         <!-- alkaline_Phosphotase -->
-        <div class="col-md-10 form-group" >
+        <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the alkaline_Phosphotase:</b> </label><br>
             <select class="selectpicker form-control" id="alkaline_Phosphotase" name="alkaline_Phosphotase" required="1"
             >
@@ -58,8 +110,8 @@
                 {% endfor %}
             </select>
         </div>
-        <div class="col-md-10 form-group" >
-            <label><b>Select the alamine_Aminotransferase:</b> </label><br>
+        <div class="col-lg-6 col-md-6 col-sm-12" >
+            <label><b>alamine_Aminotransferase:</b> </label><br>
             <select class="selectpicker form-control" id="alamine_Aminotransferase" name="alamine_Aminotransferase" required="1"
             >
                 {% for alamineaminotransferase in alamine_Aminotransferase %}
@@ -67,9 +119,11 @@
                 {% endfor %}
             </select>
         </div>
+    </div>
         <!-- aspartate_Aminotransferase -->
-        <div class="col-md-10 form-group" >
-            <label><b>Select the aspartate_Aminotransferase:</b> </label><br>
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12"  >
+            <label><b>aspartate_Aminotransferase:</b> </label><br>
             <select class="selectpicker form-control" id="aspartate_Aminotransferase" name="aspartate_Aminotransferase" required="1"
             >
                 {% for aspartateaminotransferase in aspartate_Aminotransferase %}
@@ -78,7 +132,7 @@
             </select>
         </div>
         <!-- total_Protiens -->
-        <div class="col-md-10 form-group" >
+        <div class="col-lg-6 col-md-6 col-sm-12"  >
             <label><b>Select the total_Protiens:</b> </label><br>
             <select class="selectpicker form-control" id="total_Protiens" name="total_Protiens" required="1"
             >
@@ -87,8 +141,10 @@
                 {% endfor %}
             </select>
         </div>
+    </div>
         <!-- albumin -->
-        <div class="col-md-10 form-group" >
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
             <label><b>Select the albumin:</b> </label><br>
             <select class="selectpicker form-control" id="albumin" name="albumin" required="1"
             >
@@ -97,8 +153,8 @@
                 {% endfor %}
             </select>
         </div>
-        <div class="col-md-10 form-group" >
-            <label><b>Select the albumin_and_Globulin_Ratio:</b> </label><br>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <label><b>albumin_and_Globulin_Ratio:</b> </label><br>
             <select class="selectpicker form-control" id="albumin_and_Globulin_Ratio" name="albumin_and_Globulin_Ratio" required="1"
             >
                 {% for albuminAndGlobulinRatio in albumin_and_Globulin_Ratio %}
@@ -106,15 +162,17 @@
                 {% endfor %}
             </select>
         </div>
+    </div>
         <div class="col-md-10 form-group" style="text-align: center">
-            <button  class="btn btn-primary form-control" onclick="send_data()" >Predict Price</button>
+            <button  class="btn btn-primary form-control" onclick="send_data()" >Predict</button>
         </div>
     </form>
-    <br>
-    <div class="row">
-        <div class="col-12" style="text-align: center">
-            <h4><span id="prediction"></span></h4>
-        </div>
+</div>
+</div>
+<br>
+<div >
+    <div style="text-align: center">
+        <h4><span id="prediction"></span></h4>
     </div>
 </div>
     <script>
@@ -140,7 +198,9 @@
         xhr.send(fd);
        }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    
 </body>
 </html>
-{% endblock %}
 
