--- a/static/style/homenav.css
+++ b/static/style/homenav.css
@@ -1,3 +1,185 @@
 #dropdownbtn{
     text-decoration: none !important;
 }
+* {
+    padding: 0;
+    margin: 0;
+  }
+  
+  .navbar {
+    width: 100%;
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+    /* background-colo2r: #5fd7c5; */
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+    z-index: 99;
+  }
+  
+  .newlogodiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .newlogo {
+    height: 80%;
+    width: 300px;
+    margin-left: 10px;
+  }
+  
+  .right {
+    color: black;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+  }
+  
+  .right > ul {
+    display: flex;
+    margin-right: 20px;
+  }
+  
+  .right > ul > li {
+    font-style: none;
+    text-decoration: none;
+    list-style: none;
+    margin-left: 10px;
+  }
+  
+  .sallu {
+    width: 100%;
+    height: 75vh;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+  
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .card {
+    /* position: absolute; */
+    transform: translate(50%, 50%);
+    width: 275px;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    height: 320px;
+    background: #000;
+  }
+  .card .image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  .card .image img {
+    width: 100%;
+    transition: 0.5s;
+  }
+  .card:hover .image img {
+    opacity: 0.5;
+    transform: translateX(30%); /*100%*/
+  }
+  .card .details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70%; /*100%*/
+    height: 100%;
+    background: #1c2444;
+    transition: 0.5s;
+    transform-origin: left;
+    transform: perspective(2000px) rotateY(-90deg);
+  }
+  .card:hover .details {
+    transform: perspective(2000px) rotateY(0deg);
+  }
+  .card .details .center {
+    padding: 20px;
+    text-align: center;
+    background: #fff;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .card .details .center h1 {
+    margin: 0;
+    padding: 0;
+    color: #ff3636;
+    line-height: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
+  .card .details .center h1 span {
+    font-size: 14px;
+    color: #262626;
+  }
+  .card .details .center p {
+    margin: 10px 0;
+    padding: 0;
+    color: #262626;
+  }
+  .card .details .center ul {
+    margin: 10px auto 0;
+    padding: 0;
+    display: table;
+  }
+  .card .details .center ul li {
+    list-style: none;
+    margin: 0 5px;
+    float: left;
+  }
+  .card .details .center ul li a {
+    display: block;
+    background: #ff3636;
+    color: #fff;
+    width: 120px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    transform: 0.5s;
+    text-decoration: none;
+    transition: all 0.2s linear;
+  }
+  .card .details .center ul li a:hover {
+    background: #fa1e1e;
+  }
+  /* 
+  .right > ul > li:last-child:hover .dropdown {
+    display: block;
+  } */
+  
+  .right > ul > li:last-child:hover li {
+    background-color: black;
+  }
+  
+  /* .dropdown { */
+    /* opacity: 0; */
+    /* display: none; */
+    /* list-style: none;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 15px;
+    background: #030e20;
+    padding: 0px 20px;
+    top: 80px;
+    line-height: 40px;
+    color: white;
+  } */
+  
+  /* .dropdown > ul {
+    display: none;
+  }
+   */
