--- a/templates/Home/home.html
+++ b/templates/Home/home.html
@@ -32,14 +32,14 @@
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
                 <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
-                <!-- <li><a href="/breast" class="dropdown-item"  >Breast</a></li> -->
+                <li><a href="/breast" class="dropdown-item"  >Breast</a></li>
                 <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
                 <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
               </ul>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #000;">About</a>
+            <a class="nav-link" href="/about" style="color: #000;">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: #000;">Contact</a>
