--- a/templates/index.html
+++ b/templates/index.html
@@ -81,86 +81,55 @@
           <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the bilirubin:</b> </label><br>
-            <select class="selectpicker form-control" id="totalBilirubin" name="totalBilirubin" required="1"
-            >
-                {% for bilirubin in totalBilirubin %}
-                <option value="{{ bilirubin }}">{{ bilirubin }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="totalBilirubin" name="totalBilirubin"
+            placeholder="Enter totalBilirubin ">
         </div>
         <!-- 	Direct_Bilirubin -->
         <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the direct_Bilirubin:</b> </label><br>
-            <select class="selectpicker form-control" id="Direct_Bilirubin" name="Direct_Bilirubin" required="1"
-            >
-                {% for directbilirubin in direct_Bilirubin %}
-                <option value="{{ directbilirubin }}">{{ directbilirubin }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="Direct_Bilirubin" name="Direct_Bilirubin"
+            placeholder="Enter Direct_Bilirubin">
         </div>
       </div>
         <!-- alkaline_Phosphotase -->
         <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>Select the alkaline_Phosphotase:</b> </label><br>
-            <select class="selectpicker form-control" id="alkaline_Phosphotase" name="alkaline_Phosphotase" required="1"
-            >
-                {% for alkalinephosphotas in alkaline_Phosphotase %}
-                <option value="{{ alkalinephosphotas }}">{{ alkalinephosphotas }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="alkaline_Phosphotase" name="alkaline_Phosphotase"
+            placeholder="Enter alkaline_Phosphotase">
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12" >
             <label><b>alamine_Aminotransferase:</b> </label><br>
-            <select class="selectpicker form-control" id="alamine_Aminotransferase" name="alamine_Aminotransferase" required="1"
-            >
-                {% for alamineaminotransferase in alamine_Aminotransferase %}
-                <option value="{{ alamineaminotransferase }}">{{ alamineaminotransferase }}</option>
-                {% endfor %}
-            </select>
+       
+            <input type="number" class="form-control" id="alamine_Aminotransferase" name="alamine_Aminotransferase"
+            placeholder="Enter alamine_Aminotransferase">
         </div>
     </div>
         <!-- aspartate_Aminotransferase -->
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12"  >
             <label><b>aspartate_Aminotransferase:</b> </label><br>
-            <select class="selectpicker form-control" id="aspartate_Aminotransferase" name="aspartate_Aminotransferase" required="1"
-            >
-                {% for aspartateaminotransferase in aspartate_Aminotransferase %}
-                <option value="{{ aspartateaminotransferase }}">{{ aspartateaminotransferase }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="aspartate_Aminotransferase" name="aspartate_Aminotransferase"
+            placeholder="Enter aspartate_Aminotransferase">
         </div>
         <!-- total_Protiens -->
         <div class="col-lg-6 col-md-6 col-sm-12"  >
             <label><b>Select the total_Protiens:</b> </label><br>
-            <select class="selectpicker form-control" id="total_Protiens" name="total_Protiens" required="1"
-            >
-                {% for totalprotiens in total_Protiens %}
-                <option value="{{ totalprotiens }}">{{ totalprotiens }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="total_Protiens" name="total_Protiens"
+            placeholder="Enter total_Protiens">
         </div>
     </div>
         <!-- albumin -->
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
             <label><b>Select the albumin:</b> </label><br>
-            <select class="selectpicker form-control" id="albumin" name="albumin" required="1"
-            >
-                {% for album in albumin %}
-                <option value="{{ album }}">{{ album }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="albumin" name="albumin"
+            placeholder="Enter albumin">
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
             <label><b>albumin_and_Globulin_Ratio:</b> </label><br>
-            <select class="selectpicker form-control" id="albumin_and_Globulin_Ratio" name="albumin_and_Globulin_Ratio" required="1"
-            >
-                {% for albuminAndGlobulinRatio in albumin_and_Globulin_Ratio %}
-                <option value="{{ albuminAndGlobulinRatio }}">{{ albuminAndGlobulinRatio }}</option>
-                {% endfor %}
-            </select>
+            <input type="number" class="form-control" id="albumin_and_Globulin_Ratio" name="albumin_and_Globulin_Ratio"
+            placeholder="Enter albumin_and_Globulin_Ratio">
         </div>
     </div>
         <div class="col-md-10 form-group" style="text-align: center">
