--- a/templates/Breast.html
+++ b/templates/Breast.html
@@ -5,72 +5,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/models.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/about.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
-              </li>
-              <li class="nav-item" style="height: fit-content;
-              margin-top: 8px;
-              width: 108px;">
-                <div class="dropdown">
-                  <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
-                  style="text-decoration: none !important; color: white !important; cursor: pointer;"
-                  >
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
-                    <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
-                    <li><a href="/breast" class="dropdown-item"  >Breast</a></li>
-                    <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
-                    <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Help</a>
-              </li>
-       
-            </ul>
-          </div>
+      <div>
+      <div class="navbar" style="flex-wrap: nowrap !important;">
+        <div class="newlogodiv"> 
+          <img class="newlogo"  src="{{ logo_img  }}" alt="logo" >
         </div>
-      </nav>
+        <div class="right">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+          <ul>
+            <li><a href="/" style="text-decoration: none;color: rgb(112, 112, 112);">Home</a></li>
+            <li>
+              Diseases
+              <i
+                class="fa fa-chevron-circle-down"
+                style="margin-left: 10px"
+                aria-hidden="true"
+              ></i>
+              <!-- <ul class="dropdown">
+                <li>Liver Disease</li>
+                <hr />
+                <li>Heart Disease</li>
+                <hr />
+                <li>Hypertension</li>
+                <hr />
+                <li>Breast Cancer</li>
+                <hr />
+              </ul> -->
+              <ul class="dropdown">
+                <li><a href="/liver" style="text-decoration: none;">Liver Disease</a></li>
+                <hr />
+                <li><a href="/breast" style="text-decoration: none;">Breast Cancer</a></li>
+                <hr />
+                <li><a href="/hypertension" style="text-decoration: none;">Hypertension</a></li>
+                <hr />
+                <li><a href="/heart" style="text-decoration: none;">Heart Disease</a></li>
+                <hr />
+                <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
+                <hr />
+                <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+              </ul>
+            </li>
+            <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
+            <li><a href="/contact" style="text-decoration: none;color: rgb(112, 112, 112);">Contact Us&nbsp;&nbsp;→</a></li>
+          </ul>
+        </div>
+      </div>
       <!-- End Nav Here -->
 <!-- Start Form Tag -->
-<h1>Here is Breast Cancer Prediction</h1>
-<div style="display:flex;justify-content:space-around; margin-top: 100px;">
-  <div style="width: 50%;">
-    <img src="{{ brCancerImg }}" alt="hypertension" style="width: 100%;height: 250px;">
+<h1 style="margin-left:65px;margin-top: 50px;">Breast Cancer Prediction</h1>
+<div class="mid-div">
+  <div class="mid-left">
+    <img src="{{ brCancerImg }}" alt="hypertension">
   </div>
-<form method="post" accept-charset="utf-8" name="Modelform">
+<form method="post" accept-charset="utf-8" name="Modelform" class="mid-right">
   <!-- Diagnose -->
   <!-- radius_mean -->
     <!-- onchange="load_car_models(this.id,'car_models')" -->
     <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12"  >
-      <label><b>Enter id:</b> </label><br>
+      <label class='form-label'><b>Enter id:</b> </label><br>
       <input type="number" class="form-control" id="id" name="id"
       placeholder="Enter id ">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12"  >
-      <label><b>Enter radius_mean:</b> </label><br>
+      <label class='form-label'><b>Enter radius_mean:</b> </label><br>
       <input type="number" class="form-control" id="radius_mean" name="radius_mean"
       placeholder="Enter radius_mean ">
   </div>
@@ -78,60 +82,60 @@
   <!-- perimeter_mean -->
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-12" >
-      <label><b>Enter perimeter_mean:</b> </label><br>
+      <label class='form-label'><b>Enter perimeter_mean:</b> </label><br>
       <input type="number" class="form-control" id="perimeter_mean" name="perimeter_mean"
       placeholder="Enter perimeter_mean">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12" >
-      <label><b>Enter area_mean:</b> </label><br>
+      <label class='form-label'><b>Enter area_mean:</b> </label><br>
       <input type="number" class="form-control" id="area_mean" name="area_mean"
       placeholder="Enter area_mean">
   </div>
 </div>
 <div class="row"> 
   <div class="col-lg-6 col-md-6 col-sm-12">
-    <label><b>Enter smoothness_mean:</b> </label><br>
+    <label class='form-label'><b>Enter smoothness_mean:</b> </label><br>
     <input type="number" class="form-control" id="smoothness_mean" name="smoothness_mean"
     placeholder="Enter smoothness_mean">
 </div>
 <div class="col-lg-6 col-md-6 col-sm-12">
-  <label><b>Enter concavity_mean:</b> </label><br>
+  <label class='form-label'><b>Enter concavity_mean:</b> </label><br>
   <input type="number" class="form-control" id="concavity_mean" name="concavity_mean"
   placeholder="Enter concavity_mean">
 </div>
 </div>
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter concave points_mean:</b> </label><br>
+    <label class='form-label'><b>Enter concave points_mean:</b> </label><br>
     <input type="number" class="form-control" id="concave points_mean" name="concave points_mean"
     placeholder="Enter concave points_mean">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter symmetry_mean:</b> </label><br>
+    <label class='form-label'><b>Enter symmetry_mean:</b> </label><br>
     <input type="number" class="form-control" id="symmetry_mean" name="symmetry_mean"
     placeholder="Enter symmetry_mean">
   </div>
 </div>
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter area_se:</b> </label><br>
+    <label class='form-label'><b>Enter area_se:</b> </label><br>
     <input type="number" class="form-control" id="area_se" name="area_se"
     placeholder="Enter area_se">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter radius_worst:</b> </label><br>
+    <label class='form-label'><b>Enter radius_worst:</b> </label><br>
     <input type="number" class="form-control" id="radius_worst" name="radius_worst"
     placeholder="Enter radius_worst">
   </div>
 </div>
 <div class="row"> 
   <div class="col-lg-6 col-md-6 col-sm-12"  >
-    <label><b>Enter perimeter_worst:</b> </label><br>
+    <label class='form-label'><b>Enter perimeter_worst:</b> </label><br>
     <input type="number" class="form-control" id="perimeter_worst" name="perimeter_worst"
     placeholder="Enter perimeter_worst">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12"  >
-    <label><b>Enter area_worst:</b> </label><br>
+    <label class='form-label'><b>Enter area_worst:</b> </label><br>
     <input type="number" class="form-control" id="area_worst" name="area_worst"
     placeholder="Enter area_worst">
   </div>
@@ -139,24 +143,24 @@
 
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-12"  >
-    <label><b>Enter area_worst:</b> </label><br>
+    <label class='form-label'><b>Enter area_worst:</b> </label><br>
     <input type="number" class="form-control" id="smoothness_worst" name="smoothness_worst"
     placeholder="Enter smoothness_worst">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter concavity_worst:</b> </label><br>
+    <label class='form-label'><b>Enter concavity_worst:</b> </label><br>
     <input type="number" class="form-control" id="concavity_worst" name="concavity_worst"
     placeholder="Enter concavity_worst">
   </div>
 </div>
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter concave points_worst:</b> </label><br>
+    <label class='form-label'><b>Enter concave points_worst:</b> </label><br>
     <input type="number" class="form-control" id="concave points_worst" name="concave points_worst"
     placeholder="Enter concave points_worst">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-12" >
-    <label><b>Enter symmetry_worst:</b> </label><br>
+    <label class='form-label'><b>Enter symmetry_worst:</b> </label><br>
     <input type="number" class="form-control" id="symmetry_worst" name="symmetry_worst"
     placeholder="Enter symmetry_worst">
   </div>
@@ -166,6 +170,7 @@
   <button  class="btn btn-primary form-control" onclick="send_data()" >Predict</button>
 </div>
 </form>
+</div>
 </div>
 <br>
 <div class="row">
