--- a/templates/Heart.html
+++ b/templates/Heart.html
@@ -4,63 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/models.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/about.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
-              </li>
-              <li class="nav-item" style="height: fit-content;
-              margin-top: 8px;
-              width: 108px;">
-                <div class="dropdown">
-                  <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
-                  style="text-decoration: none !important; color: white !important; cursor: pointer;"
-                  >
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
-                    <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
-                    <li><a href="/breast" class="dropdown-item" >Breast</a></li>
-                    <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
-                    <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Help</a>
-              </li>
-       
+    <div class="navbar" style="flex-wrap: nowrap !important;">
+      <div class="newlogodiv"> 
+        <img class="newlogo"  src="{{ logo_img  }}" alt="logo" >
+      </div>
+      <div class="right">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+        <ul>
+          <li><a href="/" style="text-decoration: none;color: rgb(112, 112, 112);">Home</a></li>
+          <li>
+            Diseases
+            <i
+              class="fa fa-chevron-circle-down"
+              style="margin-left: 10px"
+              aria-hidden="true"
+            ></i>
+            <ul class="dropdown">
+              <li><a href="/liver" style="text-decoration: none;">Liver Disease</a></li>
+              <hr />
+              <li><a href="/breast" style="text-decoration: none;">Breast Cancer</a></li>
+              <hr />
+              <li><a href="/hypertension" style="text-decoration: none;">Hypertension</a></li>
+              <hr />
+              <li><a href="/heart" style="text-decoration: none;">Heart Disease</a></li>
+              <hr/>
+              <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
+              <hr />
+              <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
+          </li>
+          <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
+          <li><a href="/contact" style="text-decoration: none;color: rgb(112, 112, 112);">Contact Us&nbsp;&nbsp;→</a></li>
+        </ul>
+      </div>
+    </div>
     <!-- End Navbar -->
 
     <!-- Start Form Tag -->
-    <h1 style="text-align: center;">Heart prediction</h1>
-    <div style="display:flex;justify-content:space-around; margin-top: 100px;">
-    <div style="width: 50%;">
-      <img src="{{ heartImg }}" alt="hypertension" style="width: 100%;height: 250px;">
+    <h1 style="margin-left:65px;margin-top: 50px;">Heart prediction</h1>
+    <div class="mid-div">
+    <div class="mid-left">
+      <img src="{{ heartImg }}" alt="hypertension">
     </div>
-    <form method="post" accept-charset="utf-8" name="Modelform">
+    <form method="post" accept-charset="utf-8" name="Modelform" class="mid-right">
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12" >
           <label><b>Enter Age:</b> </label><br>
