--- a/templates/Home/home.html
+++ b/templates/Home/home.html
@@ -1,185 +1,350 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/homenav.css') }}">
-  <title>Document</title>
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 0 !important;">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="#" style="color: #000;"><img src="{{ logo_img}}" alt="heart" style="width: 250px;height: 40px;"></a>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color: #000;">Home</a>
-          </li>
-          <li class="nav-item" style="height: fit-content;
-          margin-top: 8px;
-          width: 108px;">
-            <div class="dropdown">
-              <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
-              style="text-decoration: none !important; color: #000 !important; cursor: pointer;"
-              >
-                Diseases
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
-                <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
-                <li><a href="/breast" class="dropdown-item"  >Breast</a></li>
-                <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
-                <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/home.css') }}">
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <!-- navbar -->
+      <div class="navbar">
+        <div class="newlogodiv">
+          <img class="newlogo" src="{{ logo_img  }}" alt="logo_img" >
+        </div>
+        <div class="right">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+          <ul>
+            <li><a href="/" style="text-decoration: none;color: rgb(112, 112, 112);">Home</a></li>
+            <li>
+              Diseases
+              <i
+                class="fa fa-chevron-circle-down"
+                style="margin-left: 10px"
+                aria-hidden="true"
+              ></i>
+              <!-- <ul id="dropdown" class="dropdown">
+                <li>Liver Disease</li>
+                <hr />
+                <li>Heart Disease</li>
+                <hr />
+                <li>Hypertension</li>
+                <hr />
+                <li>Breast Cancer</li>
+                <hr />
+              </ul> -->
+              <ul class="dropdown">
+                <li><a href="/liver" style="text-decoration: none;">Liver Disease</a></li>
+                <hr />
+                <li><a href="/breast" style="text-decoration: none;">Breast Cancer</a></li>
+                <hr />
+                <li><a href="/hypertension" style="text-decoration: none;">Hypertension</a></li>
+                <hr />
+                <li><a href="/heart" style="text-decoration: none;">Heart Disease</a></li>
+                <hr />
+                <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
+                <hr />
+                <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
               </ul>
+            </li>
+            <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
+            <li><a href="/contact" style="text-decoration: none;color: rgb(112, 112, 112);">Contact Us&nbsp;&nbsp;→</a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- <img class="sallu" src="./images/webimg.jpg" alt="sallu" /> -->
+      <img class="sallu" src="{{ webimg  }}" alt="webimg" >
+      <!-- center -->
+      <div class="center">
+        <h1 style="color: rgb(99, 98, 98); font-weight: normal">
+          Welcome To MediTECH<br />Advancing health for everyone, everyday.
+        </h1>
+        <div class="center-cards">
+          <div class="left-card">
+            <i
+              class="fa fa-users"
+              style="
+                font-size: 27px;
+                color: white;
+                top: -30px;
+                position: absolute;
+                background: rgba(49, 101, 163, 1);
+                border-radius: 50%;
+                padding: 14.5px;
+              "
+              aria-hidden="true"
+            ></i>
+            <h2>Patients & visitors</h2>
+            <ul>
+              <li>24x7 patients & visitors can visit</li>
+              <li>Single unified platform to help everyone</li>
+              <li>Save your visiting expenses and time</li>
+              <li>Know more about your disease</li>
+              <li>80% - 90% patient satisfaction rate</li>
+              <li>No need for medical records</li>
+            </ul>
+          </div>
+          <div class="center-card">
+            <i
+              class="fa fa-cogs"
+              style="
+                font-size: 30px;
+                color: white;
+                top: -30px;
+                position: absolute;
+                background: rgb(84, 159, 230);
+                border-radius: 50%;
+                padding: 15px 14px;
+              "
+              aria-hidden="true"
+            ></i>
+            <h2>MediTECH</h2>
+            <ul>
+              <li>Convenient integrated technology platform</li>
+              <li>Skilled ML Engineers</li>
+              <li>Predictions are made consulting doctors</li>
+              <li>Provides information of 5+ serious disease</li>
+              <li>Delivers reliable and accurate information</li>
+              <li>Patient Learning Hub</li>
+            </ul>
+          </div>
+          <div class="right-card">
+            <i
+              class="fa fa-pencil-square-o"
+              style="
+                font-size: 30px;
+                color: white;
+                top: -30px;
+                position: absolute;
+                background: rgba(49, 101, 163, 1);
+                border-radius: 50%;
+                padding: 15px 15px;
+              "
+              aria-hidden="true"
+            ></i>
+            <h2>Featured Blogs</h2>
+            <ul>
+              <li>13 Ways to a healthy liver</li>
+              <li>Lisa Nelson RD on heart disease</li>
+              <li>HYPERTENSION - Know it the better way</li>
+              <li>Diabetes Self-Management</li>
+              <li>Living beyond Breast Cancer</li>
+              <li>Kidney Research UK</li>
+            </ul>
+          </div>
+        </div>
+        <h1
+          style="color: rgb(99, 98, 98); font-weight: normal; margin-top: 50px"
+        >
+          The Fitwise Difference
+        </h1>
+        <div class="center-mid">
+          <div class="mid-left">
+            <!-- <img src="./images/mid-img.jpg" alt="mid-img" /> -->
+            <img src="{{ mid_img }}" alt="mid_img" width="200px" height="400px">
+          </div>
+          <div class="mid-right">
+            <p>A Centre of Excellence for Women's, Men’s and Pelvic Health</p>
+            <br />
+            <br />
+            <p>
+              Maximize your lifestyle by optimizing your physical health – be
+              your best you!
+            </p>
+            <br />
+            <br />
+            <p>
+              We enable you to bridge the gap between treatment, exercise and
+              lifestyle in a caring and welcoming environment with:
+            </p>
+            <br />
+            <ul>
+              <li>
+                <i
+                  class="fa fa-check"
+                  style="
+                    font-size: 9px;
+                    color: white;
+                    background: rgb(57, 148, 233);
+                    border-radius: 50%;
+                    padding: 4px;
+                    margin-right: 7px;
+                  "
+                  aria-hidden="true"
+                ></i>
+                Your guide to wellness and healthy lifestyle
+              </li>
+              <li>
+                <i
+                  class="fa fa-check"
+                  style="
+                    font-size: 9px;
+                    color: white;
+                    background: rgb(57, 148, 233);
+                    border-radius: 50%;
+                    padding: 4px;
+                    margin-right: 7px;
+                  "
+                  aria-hidden="true"
+                ></i>
+                Ideal virtual way in this lock down.
+              </li>
+              <li>
+                <i
+                  class="fa fa-check"
+                  style="
+                    font-size: 9px;
+                    color: white;
+                    background: rgb(57, 148, 233);
+                    border-radius: 50%;
+                    padding: 4px;
+                    margin-right: 7px;
+                  "
+                  aria-hidden="true"
+                ></i>
+                Feel better in every way possible
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="offer">
+          <div class="offer-left">
+            <h2>WHAT WE OFFER</h2>
+            <i
+              class="fa fa-info-circle"
+              style="font-size: 65px"
+              aria-hidden="true"
+            ></i>
+          </div>
+          <div class="offer-center">
+            <p>
+              <span>COVID-19:</span> everything you need to know about visitor
+              restrictions, our screening clinic and getting vaccinated at
+              clinic.
+            </p>
+          </div>
+          <div class="offer-right">
+            <button class="btn">Find Out More</button>
+          </div>
+        </div>
+        <div class="pards">
+          <div class="pard-container">
+            <!-- <img
+              src="./images/heartpp.PNG"
+              style="z-index: 2"
+              height="100%%"
+              width="100%"
+              alt="pard-img"
+            /> -->
+            <img src="{{ heartpp }}" alt="pard-img" style="z-index: 2;" height="100%" width="100%" >
+            <div class="pard-info">
+              <div class="pard-icon">Click Here</div>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about" style="color: #000;">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #000;">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #000;">Help</a>
-          </li>
-   
-        </ul>
-      </div>
-    </div>
-  </nav>
- <!-- <div>
-  {% block content %} {% endblock %}
-</div> -->
-<img src="{{ user_image }}" alt="heart" style="width: 100%;height: 500px;">
-<div>
-  <div class="cards">
-    <div class="card">
-      <div class="image">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9RSt0LfobmdKrV8wjR_RFrNkjTc114LW6C4HdRWphH6hi5mTt0NCO08hEf8ayYlVwjmI&usqp=CAU"
-        />
-      </div>
-      <div class="details">
-        <div class="center" style="width: 100%">
-          <h1 style="font-size: 25px; font-weight: bold; margin-bottom: 20px">
-            HEART <br /><span style="color: #ff3636; font-size: 25px"
-              >DISEASE</span
-            >
-          </h1>
-          <!-- <p>
-            Lorem ipsum is simple dummy text on the printing and typesetting
-            industry.
-          </p> -->
-          <ul>
-            <li>
-              <a href="/heart"
-                ><i class="fa fa-instagram" aria-hidden="true"></i
-                >Prediction</a
-              >
-            </li>
-          </ul>
+          </div>
+          <div class="pard-container">
+            <!-- <img
+              src="./images/liverpp.PNG"
+              style="z-index: 2"
+              height="100%%"
+              width="100%"
+              alt="pard-img"
+            /> -->
+            <img src="{{ liverpp }}" alt="pard-img" style="z-index: 2;" height="100%" width="100%" >
+            <div class="pard-info">
+              <div class="pard-icon">Click Here</div>
+            </div>
+          </div>
+          <div class="pard-container">
+            <!-- <img
+              src="./images/hyperpp.PNG"
+              style="z-index: 2"
+              height="100%%"
+              width="100%"
+              alt="pard-img"
+            /> -->
+            <img src="{{ hyperpp }}" alt="hyperpp" style="z-index: 2;" height="100%" width="100%" >
+            <div class="pard-info">
+              <div class="pard-icon">Click Here</div>
+            </div>
+          </div>
+          <div class="pard-container">
+            <!-- <img
+              src="./images/mid-img.jpg"
+              style="z-index: 2"
+              height="100%%"
+              width="100%"
+              alt="pard-img"
+            /> -->
+            <img src="{{ mid_img }}" alt="mid_img" style="z-index: 2;" height="100%" width="100%" >
+            <div class="pard-info">
+              <div class="pard-icon">Click Here</div>
+            </div>
+          </div>
+        </div>
+        <div class="feedback">
+          <div class="feedback-left">
+            <i
+              class="fa fa-comment"
+              style="
+                font-size: 80px;
+                color: rgba(49, 101, 163, 1);
+                margin-right: 30px;
+              "
+              aria-hidden="true"
+            ></i>
+          </div>
+          <div class="feedback-right">
+            <p>
+              Have some feedback for us? Use our feedback process to let us
+              know.<br />
+              <span>In the case of an emergency, call 000</span>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-    <!-- Sec -->
-    <div class="card">
-      <div class="image">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9RSt0LfobmdKrV8wjR_RFrNkjTc114LW6C4HdRWphH6hi5mTt0NCO08hEf8ayYlVwjmI&usqp=CAU"
-        />
-      </div>
-      <div class="details">
-        <div class="center" style="width: 100%">
-          <h1 style="font-size: 25px; font-weight: bold; margin-bottom: 20px">
-            LIVER <br /><span style="color: #ff3636; font-size: 25px"
-              >DISEASE</span
-            >
-          </h1>
-          <!-- <p>
-            Lorem ipsum is simple dummy text on the printing and typesetting
-            industry.
-          </p> -->
-          <ul>
-            <li>
-              <a href="/liver"
-                ><i class="fa fa-instagram" aria-hidden="true"></i
-                >Prediction</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- Thi -->
-    <div class="card">
-      <div class="image">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9RSt0LfobmdKrV8wjR_RFrNkjTc114LW6C4HdRWphH6hi5mTt0NCO08hEf8ayYlVwjmI&usqp=CAU"
-        />
-      </div>
-      <div class="details">
-        <div class="center" style="width: 100%">
-          <h1 style="font-size: 25px; font-weight: bold; margin-bottom: 20px">
-            HYPER TENSION <br /><span style="color: #ff3636; font-size: 25px"
-              >DISEASE</span
-            >
-          </h1>
-          <!-- <p>
-            Lorem ipsum is simple dummy text on the printing and typesetting
-            industry.
-          </p> -->
-          <ul>
-            <li>
-              <a href="/hypertension"
-                ><i class="fa fa-instagram" aria-hidden="true"></i
-                >Prediction</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- Fou -->
-    <div class="card">
-      <div class="image">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9RSt0LfobmdKrV8wjR_RFrNkjTc114LW6C4HdRWphH6hi5mTt0NCO08hEf8ayYlVwjmI&usqp=CAU"
-        />
-      </div>
-      <div class="details">
-        <div class="center" style="width: 100%">
-          <h1 style="font-size: 25px; font-weight: bold; margin-bottom: 20px">
-            DIABETES <br /><span style="color: #ff3636; font-size: 25px"
-              >DISEASE</span
-            >
-          </h1>
-          <!-- <p>
-            Lorem ipsum is simple dummy text on the printing and typesetting
-            industry.
-          </p> -->
-          <ul>
-            <li>
-              <a href="/diabetes"
-                ><i class="fa fa-instagram" aria-hidden="true"></i
-                >Prediction</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-      </div>
-    </div>
-</div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-</body>
+      <div class="container" style="margin-top: 70px">
+        <div class="item">
+          <!-- <img
+            src="/images/footer.jpg"
+            style="
+              background-position: center;
+              background-size: cover;
+              height: 100%;
+            "
+            alt="footer"
+          /> -->
+          <img src="{{ footer }}" alt="footer" style="background-position: center;background-size: cover;height: 100%;" >
+        </div>
+        <div class="item">
+          <div class="cardi">
+            <h2 class="motto">
+              IMPROVING AND IMPACTING LIVES EVERYDAY THROUGH QAULITY MEASURES
+            </h2>
+          </div>
+          <div class="cardi">
+            <h1 class="title">SITE LINKS</h1>
+            <p class="text">About Us</p>
+            <p class="text">Contact Us</p>
+            <p class="text">Privacy Policy</p>
+            <p class="text">Terms of Service</p>
+          </div>
+          <div class="cardi">
+            <h1 class="title">ABOUT MEDITECH</h1>
+            <p class="text">
+              MediTECH is a ML based website which gives info about diseases and
+              tells people about their medical condition based on their
+              symptoms.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
-
