--- a/templates/Hypertension.html
+++ b/templates/Hypertension.html
@@ -4,70 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/models.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/about.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark" style="margin-bottom: 0 !important;">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <a class="navbar-brand" href="#" style="color: white;">Logo</a>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo03" >
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
-                  </li>
-                  <li class="nav-item" style="height: fit-content;
-                  margin-top: 8px;
-                  width: 108px;">
-                    <div class="dropdown">
-                      <a class="dropdown-toggle"  id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" 
-                      style="text-decoration: none !important; color: white !important; cursor: pointer;"
-                      >
-                        Dropdown
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><a href="/heart" class="dropdown-item" type="button">Heart</a></li>
-                        <li><a href="/liver" class="dropdown-item"  >Liver</a></li>
-                        <li><a href="/breast" class="dropdown-item" >Breast</a></li>
-                        <li><a href="/hypertension" class="dropdown-item"  >HyperTension</a></li>
-                        <li><a href="/diabetes" class="dropdown-item">Diabetes</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: white;">Help</a>
-                  </li>
-           
-                </ul>
-              </div>
-            </div>
-          </nav>
-        <!-- End Navbar -->
-        <h1 style="text-align: center;">HyperTension</h1>
-        <div style="display:flex;justify-content:space-around; margin-top: 100px;">
-          <div style="width: 50%;">
-            <img src="{{ hypertensionImg }}" alt="hypertension" style="width: 100%;height: 250px;">
+        <div class="navbar" style="flex-wrap: nowrap !important;">
+          <div class="newlogodiv"> 
+            <img class="newlogo"  src="{{ logo_img  }}" alt="logo" >
           </div>
-          <form method="post" accept-charset="utf-8" name="Modelform">
+          <div class="right">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+            <ul>
+              <li><a href="/" style="text-decoration: none;color: rgb(112, 112, 112);">Home</a></li>
+              <li>
+                Diseases
+                <i
+                  class="fa fa-chevron-circle-down"
+                  style="margin-left: 10px"
+                  aria-hidden="true"
+                ></i>
+                <ul class="dropdown">
+                  <li><a href="/liver" style="text-decoration: none;">Liver Disease</a></li>
+                  <hr />
+                  <li><a href="/breast" style="text-decoration: none;">Breast Cancer</a></li>
+                  <hr />
+                  <li><a href="/hypertension" style="text-decoration: none;">Hypertension</a></li>
+                  <hr />
+                  <li><a href="/heart" style="text-decoration: none;">Heart Disease</a></li>
+                  <hr/>
+                  <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
+                  <hr />
+                  <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+                </ul>
+              </li>
+              <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
+              <li><a href="/contact" style="text-decoration: none;color: rgb(112, 112, 112);">Contact Us&nbsp;&nbsp;→</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- End Navbar -->
+        <h1 style="margin-left:65px;margin-top: 50px;">HyperTension</h1>
+        <div class="mid-div">
+          <div class="mid-left">
+            <img src="{{ hypertensionImg }}" alt="hypertension" >
+          </div>
+          <form method="post" accept-charset="utf-8" name="Modelform" class="mid-right">
            <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12" form-group >
-                <label><b>Enter Age:</b> </label><br>
+                <label class='form-label'><b>Enter Age:</b> </label><br>
                 <input type="number" class="form-control" id="Age" name="Age"
                        placeholder="Enter Age ">
             </div>
             <!-- Gender -->
             <div class="col-lg-6 col-md-6 col-sm-12" form-group >
-                <label><b>Enter Gender</b> </label><br>
+                <label class='form-label'><b>Enter Gender</b> </label><br>
                 <select class="selectpicker form-control" id="Gender" name="Gender" required="1"
                 >
                     <option value="1">Male</option>
@@ -77,7 +70,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select Severity:</b> </label><br>
+                <label class='form-label'><b>Select Severity:</b> </label><br>
                 <select class="selectpicker form-control" id="Severity" name="Severity" required="1"
                 >
                 <option value="0">Moderate</option>
@@ -86,7 +79,7 @@
                 </select>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select BreathShortness:</b> </label><br>
+                <label class='form-label'><b>Select BreathShortness:</b> </label><br>
                 <select class="selectpicker form-control" id="BreathShortness" name="BreathShortness" required="1"
                 >
                     <option value="1">Yes</option>
@@ -96,7 +89,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select VisualChanges:</b> </label><br>
+                <label class='form-label'><b>Select VisualChanges:</b> </label><br>
                 <select class="selectpicker form-control" id="VisualChanges" name="VisualChanges" required="1"
                 >
                     <option value="1">Yes</option>
@@ -104,7 +97,7 @@
                 </select>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select NoseBleeding:</b> </label><br>
+                <label class='form-label'><b>Select NoseBleeding:</b> </label><br>
                 <select class="selectpicker form-control" id="NoseBleeding" name="NoseBleeding" required="1"
                 >
                     <option value="1">Yes</option>
@@ -114,7 +107,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select Whendiagnoused:</b> </label><br>
+                <label class='form-label'><b>Select Whendiagnoused:</b> </label><br>
                 <select class="selectpicker form-control" id="Whendiagnoused" name="Whendiagnoused" required="1"
                 >
                     <option value="0">1 - 5 Years</option>
@@ -123,7 +116,7 @@
                 </select>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select Systolic:</b> </label><br>
+                <label class='form-label'><b>Select Systolic:</b> </label><br>
                 <select class="selectpicker form-control" id="Systolic" name="Systolic" required="1"
                 >
                     <option value="0">111-129</option>
@@ -134,7 +127,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12" >
-                <label><b>Select Diastolic:</b> </label><br>
+                <label class='form-label'><b>Select Diastolic:</b> </label><br>
                 <select class="selectpicker form-control" id="Diastolic" name="Diastolic" required="1"
                 >
                     <option value="0">100+</option>
@@ -144,17 +137,25 @@
                 </select>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12" style="text-align: center;margin-top: 20px;">
-                <button  class="btn btn-primary form-control" onclick="send_data()" >Predict</button>
+                <button id="btn" class="btn btn-primary form-control" onclick="send_data()" >Predict</button>
             </div>
           </div>
             </form>
+            <div id="myModal" class="modal">
+
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <p id="prediction"></p>
+              </div>
+            
+            </div>
           </div>
-            <br>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12" style="text-align: center">
                     <h4><span id="prediction"></span></h4>
                 </div>
-            </div>
+            </div> -->
             <script>
                 function form_handler(event) {
              event.preventDefault(); // Don't submit the form normally
@@ -170,13 +171,41 @@
              document.getElementById('prediction').innerHTML="Wait! Prediction.....";
              xhr.onreadystatechange = function(){
                  if(xhr.readyState == XMLHttpRequest.DONE){
-                     document.getElementById('prediction').innerHTML="Prediction:"+xhr.responseText;
-     
+                     document.getElementById('prediction').innerHTML="Prediction: "+xhr.responseText;
+                      modal()
                  }
              };
              xhr.onload= function(){};
              xhr.send(fd);
             }
+
+            // Get the modal
+            function modal(){
+              var modal = document.getElementById("myModal");
+                  // Get the button that opens the modal
+                  var btn = document.getElementById("btn");
+
+                  // Get the <span> element that closes the modal
+                  var span = document.getElementsByClassName("close")[0];
+
+                  // When the user clicks the button, open the modal 
+                  btn.onclick = function() {
+                    modal.style.display = "block";
+                  }
+
+                  // When the user clicks on <span> (x), close the modal
+                  span.onclick = function() {
+                    modal.style.display = "none";
+                  }
+
+                  // When the user clicks anywhere outside of the modal, close it
+                  window.onclick = function(event) {
+                    if (event.target == modal) {
+                      modal.style.display = "none";
+                    }
+                  }
+            }
+
          </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
