--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
         <div class="right">
           <i class="fa fa-bars" aria-hidden="true"></i>
           <ul>
-            <li>Home</li>
+            <li><a href="/" style="text-decoration: none;color: rgb(112, 112, 112);">Home</a></li>
             <li>
               Diseases
               <i
@@ -28,7 +28,7 @@
                 style="margin-left: 10px"
                 aria-hidden="true"
               ></i>
-              <ul class="dropdown">
+              <!-- <ul class="dropdown">
                 <li>Liver Disease</li>
                 <hr />
                 <li>Heart Disease</li>
@@ -37,10 +37,23 @@
                 <hr />
                 <li>Breast Cancer</li>
                 <hr />
+              </ul> -->
+              <ul class="dropdown">
+                <li><a href="/liver" style="text-decoration: none;">Liver Disease</a></li>
+                <hr />
+                <li><a href="/breast" style="text-decoration: none;">Breast Cancer</a></li>
+                <hr />
+                <li><a href="/hypertension" style="text-decoration: none;">Hypertension</a></li>
+                <hr />
+                <li><a href="/heart" style="text-decoration: none;">Heart Disease</a></li>
+                <hr/>
+                <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
+                <hr />
+                <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
               </ul>
             </li>
-            <li>About Us</li>
-            <li>Contact Us&nbsp;&nbsp;→</li>
+            <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
+            <li><a href="/contact" style="text-decoration: none;color: rgb(112, 112, 112);">Contact Us&nbsp;&nbsp;→</a></li>
           </ul>
         </div>
       </div>
