fix breast id column issue

--- a/templates/Breast.html
+++ b/templates/Breast.html
@@ -48,7 +48,7 @@
                 <hr />
                 <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
                 <hr />
-                <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+                <!-- <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li> -->
               </ul>
             </li>
             <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
@@ -68,11 +68,11 @@
   <!-- radius_mean -->
     <!-- onchange="load_car_models(this.id,'car_models')" -->
     <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12"  >
-      <label class='form-label'><b>Enter id:</b> </label><br>
-      <input type="number" class="form-control" id="id" name="id"
-      placeholder="Enter id ">
-  </div>
+      <div class="col-lg-6 col-md-6 col-sm-12" >
+        <label class='form-label'><b>Enter concave points_worst:</b> </label><br>
+        <input type="number" class="form-control" id="concave points_worst" name="concave points_worst"
+        placeholder="Enter concave points_worst">
+      </div>
   <div class="col-lg-6 col-md-6 col-sm-12"  >
       <label class='form-label'><b>Enter radius_mean:</b> </label><br>
       <input type="number" class="form-control" id="radius_mean" name="radius_mean"
@@ -154,11 +154,11 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-6 col-md-6 col-sm-12" >
+  <!-- <div class="col-lg-6 col-md-6 col-sm-12" >
     <label class='form-label'><b>Enter concave points_worst:</b> </label><br>
     <input type="number" class="form-control" id="concave points_worst" name="concave points_worst"
     placeholder="Enter concave points_worst">
-  </div>
+  </div> -->
   <div class="col-lg-6 col-md-6 col-sm-12" >
     <label class='form-label'><b>Enter symmetry_worst:</b> </label><br>
     <input type="number" class="form-control" id="symmetry_worst" name="symmetry_worst"
