--- a/templates/Heart.html
+++ b/templates/Heart.html
@@ -37,7 +37,7 @@
               <hr/>
               <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
               <hr />
-              <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+              <!-- <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li> -->
             </ul>
           </li>
           <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
