--- a/templates/Home/home.html
+++ b/templates/Home/home.html
@@ -50,7 +50,7 @@
                 <hr />
                 <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
                 <hr />
-                <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+                <!-- <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li> -->
               </ul>
             </li>
             <li><a href="/about" style="text-decoration: none;color: rgb(112, 112, 112);">About Us</a></li>
@@ -244,7 +244,7 @@
             /> -->
             <img src="{{ heartpp }}" alt="pard-img" style="z-index: 2;" height="100%" width="100%" >
             <div class="pard-info">
-              <div class="pard-icon">Click Here</div>
+              <div class="pard-icon"><a href="/heart" style="text-decoration: none;">Click Here</a></div>
             </div>
           </div>
           <div class="pard-container">
@@ -257,7 +257,7 @@
             /> -->
             <img src="{{ liverpp }}" alt="pard-img" style="z-index: 2;" height="100%" width="100%" >
             <div class="pard-info">
-              <div class="pard-icon">Click Here</div>
+              <div class="pard-icon"><a href="/liver" style="text-decoration: none;">Click Here</a></div>
             </div>
           </div>
           <div class="pard-container">
@@ -270,7 +270,7 @@
             /> -->
             <img src="{{ hyperpp }}" alt="hyperpp" style="z-index: 2;" height="100%" width="100%" >
             <div class="pard-info">
-              <div class="pard-icon">Click Here</div>
+              <div class="pard-icon"><a href="/hypertension" style="text-decoration: none;">Click Here</a></div>
             </div>
           </div>
           <div class="pard-container">
