--- a/templates/Diabetes.html
+++ b/templates/Diabetes.html
@@ -36,7 +36,7 @@
                   <hr/>
                   <li><a href="/diabetes" style="text-decoration: none;">diabetes</a></li>
                   <hr />
-                  <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li>
+                  <!-- <li><a href="/symptom" style="text-decoration: none;">symtoms</a></li> -->
                   <hr />
                 </ul>
               </li>
